--- a/css_icon/css/all.css
+++ b/css_icon/css/all.css
@@ -6355,7 +6355,8 @@ readers do not read off random characters that represent icons */
   white-space: nowrap;
   border-width: 0; }
 :root, :host {
-  --fa-font-brands: normal 400 1em/1 "Font Awesome 6 Brands"; }
+  /* --fa-font-brands: normal 400 1em/1 "Font Awesome 6 Brands"; */
+  }
 
 @font-face {
   font-family: 'Font Awesome 6 Brands';
@@ -7866,7 +7867,8 @@ readers do not read off random characters that represent icons */
 .fa-zhihu:before {
   content: "\f63f"; }
 :root, :host {
-  --fa-font-regular: normal 400 1em/1 "Font Awesome 6 Free"; }
+  /* --fa-font-regular: normal 400 1em/1 "Font Awesome 6 Free"; */
+  }
 
 @font-face {
   font-family: 'Font Awesome 6 Free';
@@ -7880,7 +7882,8 @@ readers do not read off random characters that represent icons */
   font-family: 'Font Awesome 6 Free';
   font-weight: 400; }
 :root, :host {
-  --fa-font-solid: normal 900 1em/1 "Font Awesome 6 Free"; }
+  /* --fa-font-solid: normal 900 1em/1 "Font Awesome 6 Free"; */
+  }
 
 @font-face {
   font-family: 'Font Awesome 6 Free';
